# agents

./: README.md  poc.ipynb  pyproject.toml
llm/providers/: config.py  create_instance.py  llm_providers_info.md  provider.py  provider_options.py
llm/providers/claude/: config.py  provider.py
llm/providers/gemini/: config.py  provider.py
llm/providers/openai/: config.py  provider.py
tests/llm/providers/: create_instance.py  llm_providers_test.md  provider.py
tests/llm/providers/claude/: provider.py
tests/llm/providers/gemini/: provider.py
tests/llm/providers/openai/: provider.py
